# FusedKernelLibrary

./: CMakeLists.txt  pyproject.toml  setup.py  test_import.py
cmake/: hip_init.cmake
cmake/libs/hip/: hip.cmake
include/fused_kernel/algorithms/basic_ops/: cuda_vector.cuh
include/fused_kernel/core/execution_model/: operation_types.cuh  parallel_architectures.h  stream.h
include/fused_kernel/core/utils/: utils.h
python/: BUILD.md  CMakeLists.txt  MANIFEST.in  README.md
python/examples/: batched_operations.py  complex_pipeline.py  pytorch_integration.py  pytorch_jit_example.py  simple_fusion.py
python/fkl_ffi/: __init__.py  jit.py  operations.py  pytorch.py  stream.py  tensor.py
python/include/fkl_ffi/: fkl_ffi_api.h
python/src/: fkl_executor.cpp  fkl_ffi_api.cpp  fkl_jit.cpp  fkl_module_init.cpp  fkl_stream.cpp  fkl_stream.h  fkl_stream_hip.cpp
