[build-system]
requires = ["setuptools>=61.0", "wheel", "scikit-build-core>=0.5.0", "cmake>=3.22"]
build-backend = "scikit_build_core.build"

[project]
name = "fused-kernel-library"
version = "0.2.0"
description = "Fused Kernel Library: Automatic GPU kernel fusion with Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Oscar Amoros Huguet", email = "oscar.amoros.huguet@upc.edu"},
]
keywords = ["cuda", "gpu", "kernel-fusion", "tvm-ffi", "jit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "numpy>=1.20.0",
    "apache-tvm-ffi>=0.1.5",
    "dlpack>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["fkl_ffi"]

[tool.setuptools.package-data]
fkl_ffi = ["*.so", "*.dylib", "*.dll"]

[tool.scikit-build]
cmake.minimum-version = "3.22"
cmake.args = [
    "-DBUILD_PYTHON_BINDINGS=ON",
    "-DENABLE_JIT=ON",
]
editable.rebuild = true

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"
ENABLE_JIT = "ON"

